--- a/wireless-game-app/package.json
+++ b/wireless-game-app/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.7.2",
     "framer-motion": "^9.0.2",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -18,6 +19,7 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
+    "swiper": "^10.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
