--- a/wireless-game-app/package.json
+++ b/wireless-game-app/package.json
@@ -16,6 +16,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
