--- a/wireless-game-app/package.json
+++ b/wireless-game-app/package.json
@@ -11,9 +11,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.7.2",
+    "bootstrap": "^5.3.1",
     "framer-motion": "^9.0.2",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-router-dom": "^6.8.1",
