--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "styled-components": "^5.3.6",
     "swiper": "^10.0.4",
     "tailwind-scrollbar": "^3.0.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
