--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.7.2",
     "bootstrap": "^5.3.1",
     "framer-motion": "^9.0.2",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.8.0",
